--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         ]
     },
     "devDependencies": {
-        "codecov": "^3.5.0"
+        "codecov": "^3.5.0",
+        "enzyme": "^3.10.0",
+        "enzyme-adapter-react-16": "^1.14.0"
     }
 }
